# ros2-course

basic_concepts/install/my_py_pkg/lib/my_py_pkg/: turtle_spawner
basic_concepts/install/my_py_pkg/share/my_py_pkg/: package.sh
basic_concepts/install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh
basic_concepts/install/my_robot_interfaces/share/my_robot_interfaces/: local_setup.sh  package.sh  package.xml
basic_concepts/install/my_robot_interfaces/share/my_robot_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_my_robot_interfaces__rosidl_generator_cppExport.cmake
basic_concepts/install/my_robot_interfaces/share/my_robot_interfaces/msg/: AliveTurtles.idl
basic_concepts/log/: latest_build
basic_concepts/my_py_pkg/: setup.py
basic_concepts/my_py_pkg/my_py_pkg/: main_turtle.py  turtle_spawner.py
basic_concepts/my_robot_bringup/: CMakeLists.txt  package.xml
basic_concepts/my_robot_bringup/launch/: catch_all.launch.py
basic_concepts/my_robot_interfaces/: CMakeLists.txt
install/my_py_pkg/share/my_py_pkg/: package.xml
install/my_robot_interfaces/include/my_robot_interfaces/my_robot_interfaces/srv/: location.hpp
install/my_robot_interfaces/share/my_robot_interfaces/cmake/: export_my_robot_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  my_robot_interfaces__rosidl_typesupport_cExport.cmake  my_robot_interfaces__rosidl_typesupport_introspection_cppExport.cmake
my_py_pkg/my_py_pkg/: number_counter.py
my_robot_interfaces/msg/: AliveTurtles.msg
my_robot_interfaces/srv/: Location.srv
(+17 files in other folders)
